syntax = "proto3";

package fenzvideo.v1;

option go_package = "backend/api/fenzvideo/v1;v1";

import "google/api/annotations.proto";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterReply) {
    option (google.api.http) = {
      post: "/api/v1/auth/register"
      body: "*"
    };
  }
  rpc Login (LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/api/v1/auth/login"
      body: "*"
    };
  }
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenReply) {
    option (google.api.http) = {
      post: "/api/v1/auth/refresh"
      body: "*"
    };
  }
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string display_name = 3;
}

message RegisterReply {
  uint64 id = 1;
  string username = 2;
  string display_name = 3;
  string token = 4;
  string refresh_token = 5;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginReply {
  uint64 id = 1;
  string username = 2;
  string display_name = 3;
  string role = 4;
  string token = 5;
  string refresh_token = 6;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenReply {
  string token = 1;
  string refresh_token = 2;
}
