syntax = "proto3";
package kratos.api;

option go_package = "backend/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Auth auth = 3;
  Storage storage = 4;
  Paddle paddle = 5;
  NATS nats = 6;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
    int32 max_idle_conns = 3;
    int32 max_open_conns = 4;
    google.protobuf.Duration conn_max_lifetime = 5;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    int32 db = 4;
    google.protobuf.Duration read_timeout = 5;
    google.protobuf.Duration write_timeout = 6;
  }
  Database database = 1;
  Redis redis = 2;
}

message Auth {
  string jwt_secret = 1;
  google.protobuf.Duration token_expiry = 2;
  google.protobuf.Duration refresh_expiry = 3;
}

message Storage {
  string endpoint = 1;
  string access_key = 2;
  string secret_key = 3;
  string bucket = 4;
  bool use_ssl = 5;
  string region = 6;
}

message Paddle {
  string api_key = 1;
  string webhook_secret = 2;
  bool sandbox = 3;
}

message NATS {
  string url = 1;
}
